added forecast data, still need to fix page formatting

--- a/index.html
+++ b/index.html
@@ -129,31 +129,31 @@ Humidity
                 <div style="background-color:lightgreen;" class="row flex-grow-1">
                     <div class="col" data-forecast-day=1>
                         <h5>DATE</h5>
-                        <div>ICON</div>
+                        <div><img height="20px" width="20px"></div>
                         <p>Temp: </p>
                         <p>Humidity: </p>
                     </div>
                     <div class="col" data-forecast-day=2>
                         <h5>DATE</h5>
-                        <div>ICON</div>
+                        <div><img height="20px" width="20px"></div>
                         <p>Temp: </p>
                         <p>Humidity: </p>
                     </div>
                     <div class="col" data-forecast-day=3>
                         <h5>DATE</h5>
-                        <div>ICON</div>
+                        <div><img height="20px" width="20px"></div>
                         <p>Temp: </p>
                         <p>Humidity: </p>
                     </div>
                     <div class="col" data-forecast-day=4>
                         <h5>DATE</h5>
-                        <div>ICON</div>
+                        <div><img height="20px" width="20px"></div>
                         <p>Temp: </p>
                         <p>Humidity: </p>
                     </div>
                     <div class="col" data-forecast-day=5>
                         <h5>DATE</h5>
-                        <div>ICON</div>
+                        <div><img height="20px" width="20px"></div>
                         <p>Temp: </p>
                         <p>Humidity: </p>
                     </div>
